2007-11-20  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chpasswd.8.xml, man/chgpasswd.8.xml: Document how the
	encryption algorithm is chosen for the passwords. Document the new
	-c and -s options. Add a reference to login.defs(5).
	* man/login.defs.5.xml: Document the ENCRYPT_METHOD,
	MD5_CRYPT_ENAB, SHA_CRYPT_MIN_ROUNDS, and SHA_CRYPT_MAX_ROUNDS
	variables.
	* etc/login.defs: Indicate that MD5_CRYPT_ENAB is deprecated.
	Document the relationship with PAM for MD5_CRYPT_ENAB and
	ENCRYPT_METHOD.

2007-11-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Increase the size of crypt_passwd from 128 to 256
	to avoid overflow in case of SHA512 (161 should be sufficient).

2007-11-20  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/salt.c: Add parameters to
	crypt_make_salt to force the crypt method and number of rounds.
	* libmisc/salt.c: Add parameter to SHA_salt_rounds to force the
	number of rounds.
	* libmisc/salt.c, lib/getdef.c: ENCRYPT_METHOD and MD5_CRYPT_ENAB
	are needed also when USE_PAM (e.g. for chpasswd).
	* src/passwd.c, src/newusers.c, src/gpasswd.c: Use the new
	crypt_make_salt prototype
	* src/chpasswd.c, src/chgpasswd.c: Add option -c, --crypt-method
	and -s, --sha-rounds to specify the crypt method and number of
	rounds in case of one of the SHA methods. The new prototype of
	crypt_make_salt simplifies the handling of -m, --md5.

2007-11-19  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c: The salt has a random size (between 8 and 16
	bytes).
	* lib/getdef.c, etc/login.defs: Add definitions for
	SHA_CRYPT_MIN_ROUNDS and SHA_CRYPT_MAX_ROUNDS.
	* libmisc/salt.c: Use SHA_CRYPT_MIN_ROUNDS and SHA_CRYPT_MAX_ROUNDS
	to add a random number of rounds if needed.

2007-11-19  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c (MAGNUM): Terminate the array with nul (the array
	is then used with strcat).